syntax = "proto3";
package tendermint.proto.crypto;

option go_package = "github.com/tendermint/tendermint/proto/crypto";

import "third_party/proto/gogoproto/gogo.proto";

message PublicKey {
  option (gogoproto.equal)    = true;
  option (gogoproto.populate) = true;
  option (gogoproto.compare)  = true;

  oneof sum {
    bytes ed25519 = 1;
  }
}

// WARNING PrivateKey is used for internal purposes only
message PrivateKey {
  oneof sum {
    bytes ed25519 = 1;
  }
}
